Added js in login page for validation of user's details.

--- a/foodForMood.html
+++ b/foodForMood.html
@@ -231,7 +231,12 @@
       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
       text-align: center;
       border-radius: 15px;
+      transition: transform 0.2s ease-in-out;
 
+    }
+
+    .food:hover {
+      transform: scale(1.05);
     }
 
     p {
@@ -313,8 +318,7 @@
   <section>
     <footer>
       <h6 style="text-align: center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">&copy; Built by
-        Yashvi Thakkar<br>For more details kindly reach out through <a
-          href="yashvithakkar0929@gmail.com">Email</a></h6>
+        Yashvi Thakkar<br>For more details kindly reach out through <a href="yashvithakkar0929@gmail.com">Email</a></h6>
 
     </footer>
   </section>
