--- a/home.html
+++ b/home.html
@@ -233,28 +233,33 @@
   <h2 style="text-align: center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">What are you going to
     find here?</h2>
 
-  <ul type=none >
+  <ul type=none>
     <li><span
-        style="background: rgba(204, 47, 236, 0.808); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif"> 🍁Feeling
+        style="background: rgba(204, 47, 236, 0.808); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
+        🍁Feeling
         stressed? head towards <strong>CalmZone</strong>.
       </span></li><br><br>
     <li><span
-        style="background: rgb(230, 170, 170); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif"> 🍁Want
+        style="background: rgb(230, 170, 170); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
+        🍁Want
         to talk to yourself or want to express your own thoughts?
         visit
         <strong>Affirmation Wall</strong>.
       </span> </li><br><br>
     <li><span
-        style="background: rgba(131, 234, 215, 0.808); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif"> 🍁Soothing
+        style="background: rgba(131, 234, 215, 0.808); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
+        🍁Soothing
         through listening? Music is waiting for you at <strong>Soothing
           Sounds</strong>.</span> </li><br><br>
     <li><span
-        style="background: rgba(105, 188, 233, 0.808); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif"> 🍁What
+        style="background: rgba(105, 188, 233, 0.808); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
+        🍁What
         to do? when you are facing Depression, Anxiety, visit
         <strong>To do lists.</strong>
       </span> </li><br><br>
     <li><span
-        style="background: rgba(232, 99, 126, 0.808); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif"> 🍁Angry?
+        style="background: rgba(232, 99, 126, 0.808); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
+        🍁Angry?
         just go and <strong>Stretch it out</strong>.</span> </li><br><br>
     <li><span
         style="background: rgba(98, 218, 148, 0.808); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">🍁What
