--- a/frustrateItOut.html
+++ b/frustrateItOut.html
@@ -218,6 +218,29 @@
       transform: scale(1.05);
       background-color: rgb(48, 238, 121)
     }
+
+    h2 {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      text-align: center;
+      font-size: 36px;
+      color: #7b5e00;
+      padding: 15px;
+      margin: auto;
+    }
+
+    p {
+      font-family: 'Trebuchet MS', sans-serif;
+      text-align: center;
+      font-size: 20px;
+      color: #4d3900;
+      background-color: rgba(255, 255, 217, 0.85);
+      padding: 20px;
+      border-radius: 12px;
+      margin: 10px auto 30px auto;
+      width: 70%;
+      line-height: 1.6;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
   </style>
 
 
