pop-ups and image sliders

--- a/faqs.html
+++ b/faqs.html
@@ -234,7 +234,7 @@
         <h6 style="text-align: center;">&copy; Built by Yashvi Thakkar<br>For more details kindly reach out through <a
                 href="mailto:yashvithakkar0929@gmail.com">Email</a></h6>
     </footer>
-    <!-- 
+
     <script>
         const faqButtons = document.querySelectorAll('.faq-question');
 
@@ -255,7 +255,7 @@
                 }
             });
         });
-    </script> -->
+    </script>
 
 </body>
 
