--- a/stretchItOut.html
+++ b/stretchItOut.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-   <header>
+  <header>
     <div>
       <div>
         <img src="logo2.png" alt="CalmSutra Logo"
@@ -218,7 +218,8 @@
       transform: scale(1.05);
       background-color: rgb(48, 238, 121)
     }
-      p {
+
+    p {
       font-size: 18px;
       line-height: 1.6;
       font-family: 'Segoe UI', 'Trebuchet MS', sans-serif;
@@ -230,88 +231,120 @@
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 15px 8px rgba(0, 0, 0, 0);
-      }
+    }
 
-      ul {
-  list-style-type: square;
-  padding-left: 20px;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  font-family: 'Segoe UI', sans-serif;
-  font-size: 17px;
-  color: #3e3e3e;
-  background-color: rgba(255, 255, 255, 0.6);
-  border-radius: 12px;
-  padding: 20px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
+    ul {
+      list-style-type: square;
+      padding-left: 20px;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      font-family: 'Segoe UI', sans-serif;
+      font-size: 17px;
+      color: #3e3e3e;
+      background-color: rgba(255, 255, 255, 0.6);
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
 
-ul li {
-  margin-bottom: 12px;
-  line-height: 1.5;
-  transition: all 0.2s ease-in-out;
-  border: 3px solid rgb(247, 141, 210);
-  border-radius: 9px;
-  margin-top: 30px ;
-  margin-bottom: 30px;
-  padding: 20px ;
-}
+    ul li {
+      margin-bottom: 12px;
+      line-height: 1.5;
+      transition: all 0.2s ease-in-out;
+      border: 3px solid rgb(247, 141, 210);
+      border-radius: 9px;
+      margin-top: 30px;
+      margin-bottom: 30px;
+      padding: 20px;
+    }
 
-ul li:hover {
-  color: #d56bab;
-  font-weight: bold;
-  transform: translateY(4px);
-}
-#neck
+    ul li:hover {
+      color: #d56bab;
+      font-weight: bold;
+      transform: translateY(4px);
+    }
 
+    #neck
   </style>
 
 
-  <h2 style="text-align: center;  font-family: 'Segoe UI', 'Trebuchet MS', sans-serif;  font-weight: 900; margin-top: 20px; margin-bottom: 20px; color: #d56bab;"</h2>Stretch it out!</h2>
+  <h2
+    style="text-align: center;  font-family: 'Segoe UI', 'Trebuchet MS', sans-serif;  font-weight: 900; margin-top: 20px; margin-bottom: 20px; color: #d56bab;"
+    </h2>Stretch it out!</h2>
   <p>Stretching has been shown to increase serotonin levels — i.e., the hormone that helps stabilize our mood, reduce
     stress, and overall makes us feel good — which causes a decrease in depression and anxiety.</p>
 
-    <div class = "box">
+  <div class="box">
 
-<div>
-  <h3 style="color:#d56bab; font-family:'Segoe UI', 'Trebuchet MS', sans-serif;">Simple Stretches to Try:</h3>
-  <ul style="font-size:17px; font-family:'Segoe UI', 'Trebuchet MS', sans-serif; background:rgba(255,255,255,0.7); border-radius:10px; padding:18px; width:80%; margin:auto;">
-    <li id = "neck"><b>Neck Rolls:</b> Sit or stand tall, gently drop your chin to your chest, then slowly roll your head in a circle to loosen neck muscles.</li>
-    <li><b>Shoulder Shrugs:</b> Lift both shoulders up toward your ears, hold briefly, then release and lower. Repeat several times to relieve tension.</li>
-    <li><b>Arm Circles:</b> Extend arms out to sides, make small circles forward and backward to warm up shoulders.</li>
-    <li><b>Standing Side Stretch:</b> Stand with feet hip-width apart, reach one arm overhead and lean to the opposite side, feeling a stretch along your side. Switch sides.</li>
-    <li><b>Seated Forward Bend:</b> Sit with legs extended, reach forward toward your toes, keeping your back straight to stretch your hamstrings and back.</li>
-    <li><b>Cat-Cow Stretch:</b> On hands and knees, alternate arching your back (cat) and dipping it down (cow) to mobilize your spine.</li>
-    <li><b>Child’s Pose:</b> Kneel on the floor, sit back on your heels, stretch arms forward and lower your forehead to the ground for a gentle back stretch.</li>
-    <li><b>Wrist Stretch:</b> Extend one arm in front, palm up. Use the other hand to gently pull fingers down and back. Switch sides.</li>
-    <li><b>Seated Spinal Twist:</b> Sit with legs extended, bend one knee over the opposite leg, twist torso toward bent knee. Hold and switch sides.</li>
-    <li><b>Chest Opener:</b> Clasp hands behind your back, straighten arms, and lift hands while opening chest and squeezing shoulder blades together.</li>
-    <li><b>Butterfly Stretch:</b> Sit, bring soles of feet together, let knees fall outward. Hold feet and gently press knees toward the floor.</li>
-    <li><b>Figure Four Stretch:</b> Lie on your back, cross one ankle over opposite knee, pull the uncrossed leg toward your chest. Switch sides.</li>
-    <li><b>Hip Flexor Stretch:</b> Kneel on one knee, other foot in front. Lean forward to stretch front of hip. Switch sides.</li>
-    <li><b>Downward Dog:</b> Start on hands and knees, lift hips up and back, straighten legs and arms, forming an inverted V shape.</li>
-    <li><b>Upward Dog:</b> Lie face down, place hands under shoulders, press up lifting chest and thighs off the ground, arching back gently.</li>
-    <li><b>Triceps Stretch:</b> Raise one arm overhead, bend elbow, use other hand to gently pull elbow toward head. Switch sides.</li>
-    <li><b>Side Lunge Stretch:</b> Stand with feet wide, bend one knee and lean to that side, keeping other leg straight. Switch sides.</li>
-    <li><b>Standing Toe Touch:</b> Stand tall, slowly bend forward at hips, reaching for your toes. Hold and rise slowly.</li>
-    <li><b>Glute Stretch:</b> Lie on your back, cross one ankle over opposite knee, pull uncrossed leg toward chest. Switch sides.</li>
-    <li><b>Shoulder Stretch Across Body:</b> Bring one arm across chest, use other arm to pull it closer. Hold and switch sides.</li>
-    <li><b>Standing IT Band Stretch:</b> Stand, cross one leg behind the other, reach arm overhead and lean to opposite side. Switch sides.</li>
-    <li><b>Seated Shoulder Squeeze:</b> Sit, clasp hands behind back, squeeze shoulder blades together and lift arms slightly.</li>
-    <li><b>Supine Twist:</b> Lie on back, bring knees to chest, drop knees to one side, extend arms out. Hold and switch sides.</li>
-    <li><b>Standing Wall Stretch:</b> Stand facing a wall, place hands on wall, step back and lower chest toward floor for a shoulder stretch.</li>
-    <li><b>Forearm Stretch:</b> Extend one arm, palm down, use other hand to gently pull fingers back toward body. Switch sides.</li>
-    <li><b>Standing Hip Circles:</b> Stand with feet hip-width apart, hands on hips, gently rotate hips in circles both directions.</li>
-    <li><b>Seated Figure Four:</b> Sit, cross one ankle over opposite knee, lean forward gently to stretch hips. Switch sides.</li>
-  </ul>
-  <p style="font-size:16px; font-family:'Segoe UI', 'Trebuchet MS', sans-serif; background:rgba(242,206,233,0.5); border-radius:10px; padding:12px; width:80%; margin:auto;">
-  Try holding each stretch for 15-30 seconds and remember to breathe deeply. Listen to your body and stretch gently!
-  </p>
-</div>
-
-
-
+    <div>
+      <h3 style="color:#d56bab; font-family:'Segoe UI', 'Trebuchet MS', sans-serif;">Simple Stretches to Try:</h3>
+      <ul
+        style="font-size:17px; font-family:'Segoe UI', 'Trebuchet MS', sans-serif; background:rgba(255,255,255,0.7); border-radius:10px; padding:18px; width:80%; margin:auto;">
+        <li id="neck"><b>Neck Rolls:</b> Sit or stand tall, gently drop your chin to your chest, then slowly roll your
+          head in a circle to loosen neck muscles.</li>
+        <li><b>Shoulder Shrugs:</b> Lift both shoulders up toward your ears, hold briefly, then release and lower.
+          Repeat several times to relieve tension.</li>
+        <li><b>Arm Circles:</b> Extend arms out to sides, make small circles forward and backward to warm up shoulders.
+        </li>
+        <li><b>Standing Side Stretch:</b> Stand with feet hip-width apart, reach one arm overhead and lean to the
+          opposite side, feeling a stretch along your side. Switch sides.</li>
+        <li><b>Seated Forward Bend:</b> Sit with legs extended, reach forward toward your toes, keeping your back
+          straight to stretch your hamstrings and back.</li>
+        <li><b>Cat-Cow Stretch:</b> On hands and knees, alternate arching your back (cat) and dipping it down (cow) to
+          mobilize your spine.</li>
+        <li><b>Child’s Pose:</b> Kneel on the floor, sit back on your heels, stretch arms forward and lower your
+          forehead to the ground for a gentle back stretch.</li>
+        <li><b>Wrist Stretch:</b> Extend one arm in front, palm up. Use the other hand to gently pull fingers down and
+          back. Switch sides.</li>
+        <li><b>Seated Spinal Twist:</b> Sit with legs extended, bend one knee over the opposite leg, twist torso toward
+          bent knee. Hold and switch sides.</li>
+        <li><b>Chest Opener:</b> Clasp hands behind your back, straighten arms, and lift hands while opening chest and
+          squeezing shoulder blades together.</li>
+        <li><b>Butterfly Stretch:</b> Sit, bring soles of feet together, let knees fall outward. Hold feet and gently
+          press knees toward the floor.</li>
+        <li><b>Figure Four Stretch:</b> Lie on your back, cross one ankle over opposite knee, pull the uncrossed leg
+          toward your chest. Switch sides.</li>
+        <li><b>Hip Flexor Stretch:</b> Kneel on one knee, other foot in front. Lean forward to stretch front of hip.
+          Switch sides.</li>
+        <li><b>Downward Dog:</b> Start on hands and knees, lift hips up and back, straighten legs and arms, forming an
+          inverted V shape.</li>
+        <li><b>Upward Dog:</b> Lie face down, place hands under shoulders, press up lifting chest and thighs off the
+          ground, arching back gently.</li>
+        <li><b>Triceps Stretch:</b> Raise one arm overhead, bend elbow, use other hand to gently pull elbow toward head.
+          Switch sides.</li>
+        <li><b>Side Lunge Stretch:</b> Stand with feet wide, bend one knee and lean to that side, keeping other leg
+          straight. Switch sides.</li>
+        <li><b>Standing Toe Touch:</b> Stand tall, slowly bend forward at hips, reaching for your toes. Hold and rise
+          slowly.</li>
+        <li><b>Glute Stretch:</b> Lie on your back, cross one ankle over opposite knee, pull uncrossed leg toward chest.
+          Switch sides.</li>
+        <li><b>Shoulder Stretch Across Body:</b> Bring one arm across chest, use other arm to pull it closer. Hold and
+          switch sides.</li>
+        <li><b>Standing IT Band Stretch:</b> Stand, cross one leg behind the other, reach arm overhead and lean to
+          opposite side. Switch sides.</li>
+        <li><b>Seated Shoulder Squeeze:</b> Sit, clasp hands behind back, squeeze shoulder blades together and lift arms
+          slightly.</li>
+        <li><b>Supine Twist:</b> Lie on back, bring knees to chest, drop knees to one side, extend arms out. Hold and
+          switch sides.</li>
+        <li><b>Standing Wall Stretch:</b> Stand facing a wall, place hands on wall, step back and lower chest toward
+          floor for a shoulder stretch.</li>
+        <li><b>Forearm Stretch:</b> Extend one arm, palm down, use other hand to gently pull fingers back toward body.
+          Switch sides.</li>
+        <li><b>Standing Hip Circles:</b> Stand with feet hip-width apart, hands on hips, gently rotate hips in circles
+          both directions.</li>
+        <li><b>Seated Figure Four:</b> Sit, cross one ankle over opposite knee, lean forward gently to stretch hips.
+          Switch sides.</li>
+      </ul>
+      <p
+        style="font-size:16px; font-family:'Segoe UI', 'Trebuchet MS', sans-serif; background:rgba(242,206,233,0.5); border-radius:10px; padding:12px; width:80%; margin:auto;">
+        Try holding each stretch for 15-30 seconds and remember to breathe deeply. Listen to your body and stretch
+        gently!
+      </p>
     </div>
+
+
+
+  </div>
 
 
   <section>
