--- a/home.html
+++ b/home.html
@@ -262,7 +262,7 @@
         🍁Angry?
         just go and <strong>Stretch it out</strong>.</span> </li><br><br>
     <li><span
-        style="background: rgba(98, 218, 148, 0.808); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">🍁What
+        style="background: rgba(98, 218, 148, 0.808); font-size: larger; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">🍁Want
         to eat something according to your mood? visit <strong>Food for
           mood</strong>.</span> </li><br><br>
     <li><span
