--- a/login.html
+++ b/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -243,13 +242,15 @@
 
             <label for="password"
                 style="font-size: larger; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif"><strong>Password:</strong></label><br><br>
-            <input type="password" name="password" id="password" placeholder="Enter your password" required autofocus><br><br>
+            <input type="password" name="password" id="password" placeholder="Enter your password" required
+                autofocus><br><br>
 
             <label for="confirmPassword"
                 style="font-size: larger; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif"><strong>Confirm
                     Password:</strong></label><br><br>
 
-            <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm your password" required autofocus><br><br>
+            <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm your password"
+                required autofocus><br><br>
 
             <button class="nav-button" type="Submit" style="border-color: rgba(0, 12, 1, 0.808);
             border-width: 2px;
